Fix regexp in Google Scholar fetcher

The regexp for submitting the form to set the Bibtex cookie was bad.
How did it ever work?

BUG: 316550
FIXED-IN: 2.3.8